--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.2",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^10.16.5",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
